@@ -8,9 +8,6 @@
 // include the authentication modules
 foreach ($_auth_mods as $i) include("auth_mods/$i.inc.php");
 
-// this array contains a list of actions that don't *require* the user to be authenticated
-$actions_noauth = array("site","login","default","previewtheme","fullstory","fullstory.php","list","username_lookup","listarticles","listissues","sitelisting.php");
-
 $loginerror=0;
 $_loggedin=0;
 
