@@ -5,7 +5,14 @@
 	li {padding-bottom: 3px;}
 	</style><div style="font-family: Verdana; font-size: 12px;"><h1>Segue ChangeLog</h1><h2>Version 1.3.0</h2><h3>the future</h3><ul>
 		<li/> Change:  
-			The 'Site not availible' error is now more informative.
+			When logging in and logging out, users are kept on the same page if
+			possible instead of being redirected back to the default page.
+		 (<i>Adam Franco</i>)
+		<li/> Change:  
+			The 'Site not availible' error is now more informative and includes
+			links to "Home" as well as a "create site" link if the active user
+			is allowed to create a site in that place. The latter is useful when
+			taking advantage of the vhost functionality.
 		 (<i>Adam Franco</i>)
 		<li/> Change:  
 			When Changing to a differnt active user as admin, you are now kept on
